// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > renders default snapshot 1`] = `
<DocumentFragment>
  <div
    class="checkbox-item"
  >
    <input
      id="_r_0_"
      type="checkbox"
    />
    <label
      for="_r_0_"
    >
      foo
    </label>
    <svg
      data-icon="check"
      data-icon-source="test"
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox > renders snapshot with all props 1`] = `
<DocumentFragment>
  <div
    class="checkbox-item custom-classname"
    style="color: blue;"
  >
    <input
      checked=""
      disabled=""
      id="_r_1_"
      type="checkbox"
      value="bar"
    />
    <label
      for="_r_1_"
    >
      foo
    </label>
    <svg
      data-icon="check"
      data-icon-source="test"
    />
  </div>
</DocumentFragment>
`;
